se ajusta para recibir todos los campos
